# rust_loadtest

./: .dockerignore  .gitignore  ACCEPTABLE_USE.md  CLIPPY_FIXES.md  Cargo.toml  DOCKER.md  DOCKER_HUB_OVERVIEW.md  Dockerfile  Dockerfile.chainguard  LOAD_TEST_SCENARIOS.md  MEMORY_OPTIMIZATION.md  PHASE1_PLAN.md  PHASE2_PLAN.md  README.md  build.rs  docker-compose.loadtest-examples.yml  docker-compose.yml  generate_docs.rs
.github/workflows/: README.md  build-cicd.yaml  dev-build-cicd.yaml  dev-cicd.yaml  docker-publish.yml  release.yaml  weekly-docker-build.yaml
docs/: CLUSTER_CONFIG_SOURCE.md  CONFIG_DOCS_GENERATOR.md  CONFIG_EXAMPLES.md  CONFIG_HOT_RELOAD.md  CONFIG_SCHEMA.md  CONFIG_VERSIONING.md  CONNECTION_POOL.md  ENV_VAR_OVERRIDES.md  ISSUE_73_RESPONSE_BODY_MEMORY.md  MULTI_SCENARIO.md  SCENARIO_YAML.md  config-schema.json
edu/: loadtest.nomad.hcl
examples/: generate_docs.rs  scenario_example.rs
examples/configs/: README.md  authenticated-api.yaml  basic-api-test.yaml  data-driven-test.yaml  docker-test.yaml  ecommerce-scenario.yaml  graphql-api.yaml  large-payload-test.yaml  microservices-test.yaml  spike-test.yaml  stress-test.yaml
examples/data/: products.json  users.csv
nomad/: config-load-post.yaml  consul-kv-config-example.yaml  loadtest-consul-kv-example.nomad.hcl  standby-config.yaml
proto/: loadtest.proto
src/: assertions.rs  client.rs  cluster.rs  config.rs  config_docs_generator.rs  config_hot_reload.rs  config_merge.rs  config_source.rs  config_validation.rs  config_version.rs  connection_pool.rs  consul.rs  data_source.rs  errors.rs  executor.rs  extractor.rs  grpc.rs  lib.rs  load_models.rs  main.rs  memory_guard.rs  metrics.rs  multi_scenario.rs  percentiles.rs  raft.rs  registry.rs  scenario.rs  throughput.rs  utils.rs  worker.rs  yaml_config.rs
tests/: assertion_integration_tests.rs  config_docs_generator_tests.rs  config_examples_tests.rs  config_hot_reload_tests.rs  config_merge_tests.rs  config_validation_tests.rs  config_version_tests.rs  connection_pool_tests.rs  cookie_session_tests.rs  csv_data_driven_tests.rs  env_override_tests.rs  error_categorization_tests.rs  http_methods_tests.rs  integration_test.rs  multi_scenario_tests.rs  per_scenario_throughput_tests.rs  percentile_tracking_tests.rs  scenario_integration_tests.rs  scenario_worker_tests.rs  scenario_yaml_tests.rs  think_time_tests.rs  variable_extraction_tests.rs  yaml_config_tests.rs
